takamaka_examples/src/takamaka/tests/errors/inconsistententry1/Super.java
package takamaka.tests.errors.inconsistententry1;

import takamaka.lang.Contract;

public class Super extends Contract {
	public void m() {}
}